fixing column spacing + others

--- a/src/index.css
+++ b/src/index.css
@@ -165,3 +165,15 @@ td {
   justify-content: left;
   margin: 0 auto;
 }
+.text-left{
+  text-align: left !important;
+}
+
+td[colspan]:not([colspan="1"]) {
+  text-align: center;
+}
+@media (max-width: 800px){
+  td[colspan]:not([colspan="1"]) {
+    text-align: left !important;
+  }
+}
